--- a/zombie/package.xml
+++ b/zombie/package.xml
@@ -15,6 +15,8 @@
   <build_depend>roscpp</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>teleop-twist-joy</run_depend>
+  <run_depend>ros-kinetic-joy</run_depend>
   <run_depend>roscpp</run_depend>
 
   <export>
