--- a/demo/cfg/carlike/teb_local_planner_params.yaml
+++ b/demo/cfg/carlike/teb_local_planner_params.yaml
@@ -1,5 +1,8 @@
 TebLocalPlannerROS:
 
+ # configuration parameters are obtained from citi1_simulation.cfg in orunav_params package
+
+
  odom_topic: odom
     
  # Trajectory
@@ -14,30 +17,30 @@ TebLocalPlannerROS:
     
  # Robot
          
- max_vel_x: 4.0
+ max_vel_x: 5.0
  max_vel_x_backwards: 0.5
  max_vel_y: 0.0
- max_vel_theta: 3.0 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
+ max_vel_theta: 4.0 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
  acc_lim_x: 0.5
  acc_lim_theta: 0.5
 
  # ********************** Carlike robot parameters ********************
- min_turning_radius: 0.5        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
+ min_turning_radius: 0.3        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
  wheelbase: 1.2                 # Wheelbase of our robot
- cmd_angle_instead_rotvel: False # stage simulator takes the angle instead of the rotvel as input (twist message)
+ cmd_angle_instead_rotvel: False # gazebo simulator takes  rotvel (omega) as input (twist message)
  # ********************************************************************
 
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
    type: "line"
    radius: 0.2 # for type "circular"
-   line_start: [0.0, 0.0] # for type "line"
-   line_end: [1.2, 0.0] # for type "line"
+   line_start: [-0.27, 0.0] # for type "line"
+   line_end: [1.45, 0.0] # for type "line"
    front_offset: 0.2 # for type "two_circles"
    front_radius: 0.2 # for type "two_circles"
    rear_offset: 0.2 # for type "two_circles"
    rear_radius: 0.2 # for type "two_circles"
-   vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
-
+   vertices:  [ [-0.27,-0.25], [1.45,-0.25], [1.45,0.25], [-0.27,0.25] ]   # for type "polygon"
+              #  xmin,ymin     xmax,ymin   xmax,ymax     xmin,ymax
  # GoalTolerance
     
  xy_goal_tolerance: 0.2
@@ -46,7 +49,7 @@ TebLocalPlannerROS:
     
  # Obstacles
     
- min_obstacle_dist: 0.8 # This value must also include our robot's expansion, since footprint_model is set to "line".
+ min_obstacle_dist: 0.5 #0.2 If footprint_model is set to "line", this value must also include robot's expansion
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
  obstacle_poses_affected: 30
