--- a/demo/params/costmap_common_params.yaml
+++ b/demo/params/costmap_common_params.yaml
@@ -1,21 +1,27 @@
-max_obstacle_height: 0.60  # assume something like an arm is mounted on top of the robot
-obstacle_range: 2.5
-raytrace_range: 3.0
+footprint:  [ [-0.27,-0.25], [1.45,-0.25], [1.45,0.25], [-0.27,0.25] ] 
 
-# Obstacle Cost Shaping (http://wiki.ros.org/costmap_2d/hydro/inflation)
-robot_radius: 1.2  # distance a circular robot should be clear of the obstacle
-# footprint: [[x0, y0], [x1, y1], ... [xn, yn]]  # if the robot is not circular
-inflation_radius: 0.50  # max. distance from an obstacle at which costs are incurred for planning paths.
-#cost_scaling_factor: 5  # exponential rate at which the obstacle cost drops off (default: 10)
 
-# voxel map configuration; z-voxels 0 are filled by bumpers and 1 by laser scan (kinect)
-map_type: voxel
-origin_z: 0.0
-z_resolution: 0.2
-z_voxels: 2
-publish_voxel_map: false
+transform_tolerance: 0.2
+map_type: costmap
 
-observation_sources: scan1 scan2
+obstacle_layer:
+ enabled: true
+ obstacle_range: 3.0
+ raytrace_range: 3.5
+ inflation_radius: 0.2
+ track_unknown_space: false
+ combination_method: 1
 
-scan1: {data_type: LaserScan, topic: safety_laser_fil, marking: true, clearing: true, min_obstacle_height: 0.25, max_obstacle_height: 0.35}
-scan2: {data_type: LaserScan, topic: nav_laser_fil, marking: true, clearing: true, min_obstacle_height: 0.25, max_obstacle_height: 0.35}
+ observation_sources: safe_laser_scan_sensor nav_laser_scan_sensor
+ safe_laser_scan_sensor: {data_type: LaserScan, topic: safety_laser_fil, marking: true, clearing: true}
+ nav_laser_scan_sensor: {data_type: LaserScan, topic: nav_laser_fil, marking: true, clearing: true}
+
+
+inflation_layer:
+  enabled:              true
+  cost_scaling_factor:  10   # exponential rate at which the obstacle cost drops off (default: 10)
+  inflation_radius:     2.5  # max. distance from an obstacle at which costs are incurred for planning paths.
+
+static_layer:
+  enabled:              true
+  map_topic:            "/map"
