--- a/iliad_smp_planner/package.xml
+++ b/iliad_smp_planner/package.xml
@@ -16,7 +16,10 @@
     <build_depend>pluginlib</build_depend>
     <build_depend>nav_core</build_depend>
     <build_depend>base_local_planner</build_depend>
-    <build_depend>tf</build_depend>
+    
+    <build_depend>tf2_ros</build_depend>
+    <build_depend>geometry_msgs</build_depend>
+    <build_depend>tf2_geometry_msgs</build_depend>
     <!--<build_depend>angles</build_depend>-->
 
     <run_depend>roscpp</run_depend>
