--- a/iliad_smp_planner/package.xml
+++ b/iliad_smp_planner/package.xml
@@ -21,6 +21,7 @@
     <build_depend>geometry_msgs</build_depend>
     <build_depend>tf2_geometry_msgs</build_depend>
     <build_depend>orunav_msgs</build_depend>
+    <build_depend>orunav_generic</build_depend>
     <!--<build_depend>angles</build_depend>-->
 
     <run_depend>roscpp</run_depend>
@@ -28,6 +29,7 @@
     <run_depend>nav_core</run_depend>
     <run_depend>base_local_planner</run_depend>
     <run_depend>orunav_msgs</run_depend>
+    <run_depend>orunav_generic</run_depend>
 
     <export>
         <nav_core plugin="${prefix}/bgp_plugin.xml" />
