--- a/twist_controller/package.xml
+++ b/twist_controller/package.xml
@@ -13,7 +13,8 @@
 
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
-
+  <build_depend>kvaser-libcan</build_depend>
+  
   <run_depend>geometry_msgs</run_depend>
   <run_depend>teleop_twist_joy</run_depend>
   <run_depend>joy</run_depend>
