Added dynamic reconfigure stub

--- a/envelope_manager/CMakeLists.txt
+++ b/envelope_manager/CMakeLists.txt
@@ -1,37 +1,36 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(envelope_manager)
 
-find_package(catkin REQUIRED
-  cmake_modules
+find_package(catkin REQUIRED COMPONENTS
+  dynamic_reconfigure
   roscpp
+  rospy
   orunav_msgs
 )
 
+generate_dynamic_reconfigure_options(
+   cfg/envelopeManager.cfg
+)
 
-catkin_package(CATKIN_DEPENDS 
-                    roscpp 
-                    orunav_msgs 
-               DEPENDS 
-                    Boost
+catkin_package(
+   INCLUDE_DIRS include
+   CATKIN_DEPENDS dynamic_reconfigure roscpp rospy orunav_msgs
 )
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(envelope_manager_node src/envelope_manager_node.cpp)
-add_dependencies(envelope_manager_node ${catkin_EXPORTED_TARGETS})
-target_link_libraries(envelope_manager_node
+add_executable(em_node src/em_node.cpp)
+
+add_dependencies(em_node ${PROJECT_NAME}_gencfg ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+target_link_libraries(em_node
    ${catkin_LIBRARIES}
+ )
+
+install(TARGETS em_node
+   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
-
-#############
-## Install ##
-#############
-
-install(TARGETS envelope_manager_node
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
-
