--- a/envelope_manager/package.xml
+++ b/envelope_manager/package.xml
@@ -3,7 +3,7 @@
   <name>envelope_manager</name>
   <version>0.0.1</version>
   <description>The orunav_coordinator_fake package</description>
-  <maintainer email="mfernandecarmona@lincoln.ac.uk">Manuel Fernandez</maintainer>
+  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel Fernandez</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
