--- a/nav_simulation/params/nav_laser_filter_old.yaml
+++ b/nav_simulation/params/nav_laser_filter_old.yaml
@@ -1,11 +1,12 @@
+# this is for the old cititruck configuration
 scan_filter_chain:
 - name: wheelBox
   type: LaserScanAngularBoundsFilter
   params:
-    lower_angle: -1.65
-    upper_angle: -1.45
+    lower_angle:  0.89
+    upper_angle:  1.02
 - name: wheelBox2
   type: LaserScanAngularBoundsFilter
   params:
-    lower_angle:  1.5
-    upper_angle:  1.7
+    lower_angle:  -1.02
+    upper_angle:  -0.89
