--- a/nav_simulation/params/global_costmap_params.yaml
+++ b/nav_simulation/params/global_costmap_params.yaml
@@ -1,6 +1,6 @@
 global_costmap:
-  global_frame: /map
-  robot_base_frame: base_link
+  global_frame: map_laser2d
+  robot_base_frame: robot4/base_link
   update_frequency: 5.0
   publish_frequency: 2.0
   static_map: true
