--- a/envelope_manager/package.xml
+++ b/envelope_manager/package.xml
@@ -45,18 +45,19 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>dynamic_reconfigure</build_depend>
+  <!--  build_depend dynamic_reconfigure  build_depend -->
+
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>orunav_msgs</build_depend>
   <build_depend>driver_base</build_depend>
-  <build_export_depend>dynamic_reconfigure</build_export_depend>
+  <!--  build_export_depend  dynamic_reconfigure  /build_export_depend -->
   
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>driver_base</exec_depend>
   <exec_depend>orunav_msgs</exec_depend>
-  <exec_depend>dynamic_reconfigure</exec_depend>
+  <!-- exec_depend   dynamic_reconfigure   /exec_depend -->
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
 
