--- a/nav_simulation/params/costmap_common_params.yaml
+++ b/nav_simulation/params/costmap_common_params.yaml
@@ -12,9 +12,9 @@ obstacle_layer:
  track_unknown_space: false
  combination_method: 1
 
- observation_sources: safe_laser_scan_sensor nav_laser_scan_sensor
- safe_laser_scan_sensor: {data_type: LaserScan, topic: /robot4/sensors/laser2d_floor_fil, marking: true, clearing: true}
- nav_laser_scan_sensor: {data_type: LaserScan, topic: /robot4/sensors/laser2d_top_fil, marking: true, clearing: true}
+# observation_sources: safe_laser_scan_sensor nav_laser_scan_sensor
+ safe_laser_scan_sensor: {data_type: LaserScan, topic: /robot5/sensors/laser2d_floor_fil, marking: true, clearing: true}
+ nav_laser_scan_sensor: {data_type: LaserScan, topic: /robot5/sensors/laser2d_top_fil, marking: true, clearing: true}
 
 
 inflation_layer:
