Solved package dependencies and minor CMake fixings for the buildfarm

--- a/taros19_experiments/CMakeLists.txt
+++ b/taros19_experiments/CMakeLists.txt
@@ -15,7 +15,7 @@ install(DIRECTORY
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-install(DIRECTORY
-   config
-   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+#install(DIRECTORY
+#   config
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+#)
