--- a/gazebo_plugins/gazebo_plugin_binary_contact/package.xml
+++ b/gazebo_plugins/gazebo_plugin_binary_contact/package.xml
@@ -18,7 +18,7 @@
 
   <!-- Dependencies needed to compile this package. -->
   <build_depend>roscpp</build_depend>
-  <build_depend>gazebo</build_depend>
+  <build_depend>gazebo8</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>diagnostic_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
@@ -31,7 +31,7 @@
 
   <!-- Dependencies needed after this package is compiled. -->
   <run_depend>roscpp</run_depend>
-  <run_depend>gazebo_ros</run_depend>
+  <run_depend>gazebo8_ros</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>diagnostic_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
