--- a/iliad_human_local_navigation/package.xml
+++ b/iliad_human_local_navigation/package.xml
@@ -59,6 +59,8 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>spencer_tracking_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>tf_bag</build_depend>
+
   <build_export_depend>bayes_people_tracker</build_export_depend>
   <build_export_depend>dynamic_reconfigure</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
