--- a/base_simulation/package.xml
+++ b/base_simulation/package.xml
@@ -8,6 +8,7 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>contact_monitor</run_depend>
 
   <export>
   </export>
