--- a/taros19_experiments/tmule/replay_ncfm.yaml
+++ b/taros19_experiments/tmule/replay_ncfm.yaml
@@ -1,7 +1,7 @@
 
 ---
 init_cmd: |
-  EXPERIMENT_ID="S1-T1.2-A1"
+  EXPERIMENT_ID="S1-T1.1-A2"
   BAGS_FOLDER="/home/manolofc/iliad/tj/"
   ROS_WORKSPACE="/home/manolofc/workspace/taros/"
   source $ROS_WORKSPACE"devel/setup.bash"
@@ -13,5 +13,5 @@ windows:
 - name: robot
   panes:
   - sleep 1; roslaunch iliad_human_local_navigation together.launch bagFilename:=$BAGS_FOLDER$EXPERIMENT_ID.bag map_file:=$BAGS_FOLDER$EXPERIMENT_ID.yaml
-  - sleep 10; rosbag record -o $EXPERIMENT_ID"_tiny" /tf /tf_static /robot5/robot_poseST /robot5/human_perception/tracked_persons /robot5/people_tracker/positions /move_base/current_goal /robot5/online_qtc_creator/qtc_array
+  - sleep 10; rosbag record -o $EXPERIMENT_ID"_tiny" /tf /tf_static /robot5/robot_pose_odom /robot5/human_perception/tracked_persons /robot5/people_tracker/positions /robot5/move_base/current_goal_odom /robot5/online_qtc_creator/qtc_array
   - sleep 15; rosbag play --clock  $BAGS_FOLDER$EXPERIMENT_ID.bag
