--- a/iliad_local_planner/package.xml
+++ b/iliad_local_planner/package.xml
@@ -13,6 +13,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>orunav_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>tf2</build_depend>
+
   <build_depend>costmap_2d</build_depend>
   <build_depend>base_local_planner</build_depend>
   <build_depend>pluginlib</build_depend>
@@ -28,6 +30,7 @@
   <exec_depend>orunav_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>tf</exec_depend>
+  <exec_depend>tf2</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>costmap_2d</exec_depend>
   <exec_depend>base_local_planner</exec_depend>
