--- a/iliad_local_planner/package.xml
+++ b/iliad_local_planner/package.xml
@@ -14,6 +14,7 @@
   <build_depend>orunav_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>tf2</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
 
   <build_depend>costmap_2d</build_depend>
   <build_depend>base_local_planner</build_depend>
@@ -31,6 +32,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>tf2</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>costmap_2d</exec_depend>
   <exec_depend>base_local_planner</exec_depend>
