--- a/iliad_base_simulation/package.xml
+++ b/iliad_base_simulation/package.xml
@@ -4,8 +4,10 @@
   <version>0.0.1</version>
   <description>Gazebo world configurations and simulated forklifts used in other packages.</description>
 
-  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel</maintainer>
-  <license>TODO</license>
+  <maintainer email="manolofc@gmail.com">Manuel Fernandez-Carmona</maintainer>
+  <license>BSD</license>
+
+  <author email="manolofc@gmail.com">Manuel Fernandez-Carmona</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>contact_monitor</run_depend>
