--- a/iliad_citi_controller/package.xml
+++ b/iliad_citi_controller/package.xml
@@ -2,10 +2,12 @@
 <package>
   <name>iliad_citi_controller</name>
   <version>0.0.1</version>
-  <description>cititruck driver </description>
+  <description>cititruck driver for manual control </description>
 
-  <maintainer email="manolofc@gmail.com">Manuel Fdez</maintainer>
-  <license>TODO</license>
+  <maintainer email="manolofc@gmail.com">Manuel Fernandez-Carmona</maintainer>
+  <license>BSD</license>
+
+  <author email="manolofc@gmail.com">Manuel Fernandez-Carmona</author>
 
   <build_depend>cmake_modules</build_depend>
 
