- renamed iliad_velocity_costmaps to iliad_human_aware_navigation - renamed iliad_dynamic_constraints to iliad_hrsi - moved spencer_to_bayes.py from iliad_human_local_navigation to iliad_hrsi - divided QTCplot into qtc_generator (just logic) and QTCPlot (just plot) in iliad_hrsi - changed ms3.launch to iliad_human_aware_navigation.launch

--- a/iliad_hrsi/package.xml
+++ b/iliad_hrsi/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>iliad_dynamic_constraints</name>
+  <name>iliad_hrsi</name>
   <version>0.0.1</version>
   <description>
   Contains several works regarding local alterations of speeds or constraints. 
