--- a/iliad_human_aware_navigation/cfg/VelocityCostmaps.cfg
+++ b/iliad_human_aware_navigation/cfg/VelocityCostmaps.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "iliad_velocity_costmaps"
+PACKAGE = "iliad_human_aware_navigation"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
