--- a/iliad_human_aware_navigation/cfg/constraintSettings.cfg
+++ b/iliad_human_aware_navigation/cfg/constraintSettings.cfg
@@ -2,7 +2,7 @@
 
 # trajectory envelope manager dynamic reconfiguration
 
-PACKAGE='iliad_dynamic_constraints'
+PACKAGE='iliad_hrsi'
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 from driver_base.msg import SensorLevels
@@ -25,4 +25,4 @@ gen.add("bounds_tangential_velocity_min",     double_t, SensorLevels.RECONFIGURE
 gen.add("bounds_tangential_velocity_max",     double_t, SensorLevels.RECONFIGURE_RUNNING, "Maximum tangential_velocity bounds constraint", 5)
 
 
-exit(gen.generate(PACKAGE, "iliad_dynamic_constraints", "constraintSettings"))
+exit(gen.generate(PACKAGE, "iliad_hrsi", "constraintSettings"))
