--- a/iliad_human_aware_navigation/CMakeLists.txt
+++ b/iliad_human_aware_navigation/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(iliad_velocity_costmaps)
+project(iliad_human_aware_navigation)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
