--- a/iliad_hrsi/package.xml
+++ b/iliad_hrsi/package.xml
@@ -22,35 +22,38 @@
   <build_depend>bayes_people_tracker</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>orunav_msgs</build_depend>
-  <build_depend>numpy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>spencer_tracking_msgs</build_depend>
   <build_depend>tf</build_depend>
-  <build_depend>math</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>visualization_msgs</build_depend>
-  <build_depend>uuid</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
-  <build_depend>threading</build_depend>
-  <build_depend>qsrlib</build_depend>
-  <build_depend>qsrlib_io</build_depend>
+
+  <build_depend>python-numpy</build_depend>
+  <build_depend>uuid</build_depend>
+  <build_depend>qsr_lib</build_depend>
+  
+  <!-- <build_depend>math</build_depend>
+  <build_depend>threading</build_depend> -->
+  
 
   <exec_depend>rospy</exec_depend>
   <exec_depend>bayes_people_tracker</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>orunav_msgs</exec_depend>
-  <exec_depend>numpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>spencer_tracking_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
-  <exec_depend>math</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
-  <exec_depend>uuid</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
-  <exec_depend>threading</exec_depend>
-  <exec_depend>qsrlib</exec_depend>
-  <exec_depend>qsrlib_io</exec_depend>
+
+  <exec_depend>python-numpy</exec_depend>
+  <exec_depend>uuid</exec_depend>
+  <exec_depend>qsr_lib</exec_depend>
+
+  <!-- <exec_depend>math</exec_depend>
+  <exec_depend>threading</exec_depend> -->
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
