--- a/iliad_human_aware_navigation/package.xml
+++ b/iliad_human_aware_navigation/package.xml
@@ -25,11 +25,13 @@
   <build_depend>visualization_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>json</build_depend>
-  <build_depend>numpy</build_depend>
-  <build_depend>scipy</build_depend>
-  <build_depend>threading</build_depend>
-  <build_depend>matplotlib</build_depend>
+
+  <build_depend>python-numpy</build_depend>
+  <build_depend>python-scipy</build_depend>
+  <build_depend>python-matplotlib</build_depend>
+
+  <!-- <build_depend>threading</build_depend>
+  <build_depend>json</build_depend> -->
 
   <exec_depend>rospy</exec_depend>
   <exec_depend>tf</exec_depend>
@@ -42,11 +44,15 @@
   <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>json</exec_depend>
-  <exec_depend>numpy</exec_depend>
-  <exec_depend>scipy</exec_depend>
+  
+  <exec_depend>python-numpy</exec_depend>
+  <exec_depend>python-scipy</exec_depend>
+  <exec_depend>python-matplotlib</exec_depend>
+  
+  <!-- 
   <exec_depend>threading</exec_depend>
-  <exec_depend>matplotlib</exec_depend>
+  <exec_depend>json</exec_depend> 
+  -->
 
   <export/>
 </package>
