Fixed some minor errors Added first version of hrsi plan assessment Corrected slider_gui config files to use four speed constrains setup Removed some verbosity Added max cost in path option for task cost

--- a/iliad_human_aware_navigation/rqtGui/slider_4.yaml
+++ b/iliad_human_aware_navigation/rqtGui/slider_4.yaml
@@ -1,5 +1,8 @@
 publish_interval: 100
 settings:
-  /robot4/velocity_constraints/data[0]: {is_repeat: false, max: 0.6, min: 0.0}
-  /robot4/velocity_constraints/data[1]: {is_repeat: false, max: 0.5, min: 0.0}
-texts: ['/robot4/velocity_constraints/data[0]','/robot4/velocity_constraints/data[1]']
+  /robot4/velocity_constraints/data[0]: {is_repeat: false, max: 0.8, min: 0.01}
+  /robot4/velocity_constraints/data[1]: {is_repeat: false, max: 0.8, min: 0.01}
+  /robot4/velocity_constraints/data[2]: {is_repeat: false, max: 0.8, min: 0.01}
+  /robot4/velocity_constraints/data[3]: {is_repeat: false, max: 0.8, min: 0.01}
+texts: ['/robot4/velocity_constraints/data[0]', '/robot4/velocity_constraints/data[1]',
+  '/robot4/velocity_constraints/data[2]', '/robot4/velocity_constraints/data[3]']
