--- a/iliad_human_aware_navigation/rqtGui/slider_3.yaml
+++ b/iliad_human_aware_navigation/rqtGui/slider_3.yaml
@@ -1,5 +1,8 @@
 publish_interval: 100
 settings:
-  /robot3/velocity_constraints/data[0]: {is_repeat: false, max: 0.6, min: 0.0}
-  /robot3/velocity_constraints/data[1]: {is_repeat: false, max: 0.3, min: 0.0} # old was 0.5
-texts: ['/robot3/velocity_constraints/data[0]','/robot3/velocity_constraints/data[1]']
+  /robot3/velocity_constraints/data[0]: {is_repeat: false, max: 0.8, min: 0.01}
+  /robot3/velocity_constraints/data[1]: {is_repeat: false, max: 0.8, min: 0.01}
+  /robot3/velocity_constraints/data[2]: {is_repeat: false, max: 0.8, min: 0.01}
+  /robot3/velocity_constraints/data[3]: {is_repeat: false, max: 0.8, min: 0.01}
+texts: ['/robot3/velocity_constraints/data[0]', '/robot3/velocity_constraints/data[1]',
+  '/robot3/velocity_constraints/data[2]', '/robot3/velocity_constraints/data[3]']
