download model during compliation because it weights a lot

--- a/iliad_base_simulation/package.xml
+++ b/iliad_base_simulation/package.xml
@@ -10,8 +10,14 @@
   <author email="manolofc@gmail.com">Manuel Fernandez-Carmona</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+  
+  <build_depend>gazebo_ros</build_depend>
+
+  <run_depend>gazebo_ros</run_depend>
   <run_depend>contact_monitor</run_depend>
 
   <export>
+    <gazebo_ros gazebo_model_path="${prefix}/models"/>
+    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
   </export>
 </package>
